<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_controller_desc"
                android:ems="10"
                android:id="@+id/description_text"
                tools:text="@string/activity_controller_desc"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15sp"/>
    </FrameLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:visibility="visible"
                  android:id="@+id/loadingView">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/progressBar"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_controller_data_is_loading"
                tools:text="@string/activity_controller_data_is_loading"
                android:gravity="center_horizontal"/>
    </LinearLayout>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0,1,2"
            android:id="@+id/controllerView"
            android:visibility="gone">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_controller_current_indoor_temperature_label"
                    android:id="@+id/activity_controller_current_temperature_indoor_label"
                    tools:text="@string/activity_controller_current_indoor_temperature_label"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:id="@+id/activity_controller_current_temperature_indoor_value"
                    android:text="@string/activity_controller_current_temperature_default_value"
                    tools:text="@string/activity_controller_current_temperature_default_value"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:gravity="end"
                    android:layout_gravity="center"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_controller_current_outdoor_temperature_label"
                    android:id="@+id/activity_controller_current_temperature_outdoor_label"
                    tools:text="@string/activity_controller_current_outdoor_temperature_label"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:id="@+id/activity_controller_current_temperature_outdoor_value"
                    android:text="@string/activity_controller_current_temperature_default_value"
                    tools:text="@string/activity_controller_current_temperature_default_value"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:gravity="end"
                    android:layout_gravity="center"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_controller_furnace_state_label"
                    android:id="@+id/activity_controller_furnace_state_label"
                    tools:text="@string/activity_controller_furnace_state_label"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:id="@+id/activity_controller_furnace_state_value"
                    android:text="@string/activity_controller_furnace_state_on_value"
                    tools:text="@string/activity_controller_furnace_state_on_value"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:gravity="end"
                    android:layout_gravity="center"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_controller_set_temperature_label"
                    android:id="@+id/activity_controller_set_temperature_label"
                    tools:text="@string/activity_controller_set_temperature_label"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:layout_gravity="center_vertical"/>

            <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/activity_controller_set_temperature_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:np_width="140dp"
                    app:np_height="40dp"
                    app:np_dividerColor="@color/colorPrimary"
                    app:np_formatter="@string/activity_controller_set_temperature_value"
                    app:np_orientation="horizontal"
                    app:np_max="40"
                    app:np_min="0"
                    app:np_selectedTextColor="@color/colorPrimary"
                    app:np_selectedTextSize="22sp"
                    app:np_textColor="@color/colorPrimary"
                    app:np_textSize="18sp"
                    app:np_value="20"
                    app:np_wrapSelectorWheel="true" />

        </TableRow>
        <Button
                android:id="@+id/activity_controller_update_set_temperature"
                android:text="@string/activity_controller_update_temperature_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone"
        />
        <ProgressBar
                android:id="@+id/activity_controller_updating_temperature"
                android:visibility="gone"
        />
    </TableLayout>
</LinearLayout>