<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_summary_desc"
                android:ems="10"
                android:id="@+id/description_text"
                tools:text="@string/activity_summary_desc"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15sp"/>
    </FrameLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:visibility="visible"
                  android:id="@+id/selectDateView">

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/selectDateButton"
                android:text="@string/activity_summary_select_date_button"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:visibility="gone"
                  android:id="@+id/loadingViewDaily">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/progressBar"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_controller_data_is_loading"
                tools:text="@string/activity_controller_data_is_loading"
                android:gravity="center_horizontal"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.CombinedChart
            android:id="@+id/hourly_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
</LinearLayout>